add source code link to main page.

--- a/flask_graphene/base/templates/base.html
+++ b/flask_graphene/base/templates/base.html
@@ -1,6 +1,7 @@
 {% extends "template.html" %}
 {% block content %}
   <p>Welcome to flask_graphene</p>
-  <a href={{ url_for("api.graphql") }}>GraphQL</a>
+  <p><a href={{ url_for("api.graphql") }}>GraphQL</a></p>
+  <p><a href=https://github.com/dmarsh19/flask_graphene>source code</a></p>
 {% endblock %}
 
